--- a/eureka-server (1)/eureka-server/src/main/resources/application.properties
+++ b/eureka-server (1)/eureka-server/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.application.name=eureka-server
+spring.application.name=eurekaserver
 server.port=8761
-
-eureka.instance.hostname: localhost
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
 eureka.instance.prefer-ip-address=true
-
+eureka.instance.hostname: localhost
