--- a/overduesandfines 4/overduesandfines/overduesandfines/pom.xml
+++ b/overduesandfines 4/overduesandfines/overduesandfines/pom.xml
@@ -35,6 +35,13 @@
 		<lombok.version>1.18.36</lombok.version>
 	</properties>
 	<dependencies>
+		<!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-config-client -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-config-client</artifactId>
+			<version>4.2.3</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
