--- a/overduesandfines 4/overduesandfines/overduesandfines/src/main/resources/application.properties
+++ b/overduesandfines 4/overduesandfines/overduesandfines/src/main/resources/application.properties
@@ -3,19 +3,6 @@ spring.application.name=OVERDUE-FINE
 # Server Configuration
 server.port=8086
 
-
-# MySQL Database Connection
-spring.datasource.url=jdbc:mysql://localhost:3306/OverDue_db?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=Sahilsaeed@1443
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-# JPA and Hibernate Configuration
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-
-eureka.instance.hostname: localhost
-eureka.instance.prefer-ip-address=true
-
-
+# github Config
+spring.config.import=optional:configserver:http://localhost:8888
+spring.jackson.serialization.indent-output= true
